--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -15,7 +15,7 @@
 
   <div class="container">
     
-      <img src="./assets/images/avatar-jessica.jpeg" alt="Victor Crest" class="profile-image">
+      <img src="./assets/images/profile-pic.png" alt="Victor Crest" class="profile-image">
       <h1>Artur Janahú</h1>
       <h2>Salvador, Bahia</h2>
       <p>Desenvolvedor Frontend</p>
